Image alignment fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -967,6 +967,14 @@ p.cardText {
   width: 100%;
   max-width: 395px;
 
+  img {
+    width: 100%;
+    height: 100%;
+    max-height: 261px;
+    max-width: 395px;
+    object-fit: cover;
+  }
+
   h5 {
     font-family: "Work Sans",sans-serif;
     color: #333;
@@ -989,4 +997,10 @@ p.cardText {
     max-width: 100%;
     margin-bottom: 24px;
   }
+}
+
+.portfolio-image-container {
+  width:100%;
+  max-width: 395px;
+  max-height: 261px;
 }
